--- a/MicroForum2.csproj
+++ b/MicroForum2.csproj
@@ -129,7 +129,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\forumBD.sql" />
+    <Content Include="App_Data\meuSQL.sql" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
